# Local-LLM

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: deployment.ipynb  finetune_bert_text_classifier.ipynb  finetune_demo.ipynb  inference_demo.ipynb  notebook.ipynb  setup_demo.ipynb
notebooks/archived_notebooks/: train_with_gpu.ipynb
src/local-llm/models/: bert.py
src/local_llm/: __init__.py  convert.py
src/local_llm/models/: bert.py
src/local_llm/training/: text_finetune.py
tests/: test_bert.py  test_text_classification.py  test_text_finetune.py
