[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "local_llm"                # change to your real name
version = "0.1.0"
description = "Library to run open-source large language models (LLMs) stored locally."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Cameron Webster", email = "cameron.webster@nnsa.doe.gov" },
]

[project.urls]
Homepage = "https://github.doe.gov/Cameron-Webster/local-llm.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
