[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "local_llm"                # change to your real name
version = "0.1.0"
description = "Library to run open-source large language models (LLMs) stored locally."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Cameron Webster", email = "cameron.webster@nnsa.doe.gov" },
]

[project.urls]
Homepage = "https://github.doe.gov/Cameron-Webster/local-llm.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local_llm"
version = "0.1.0"
description = "Library to run open-source large language models (LLMs) stored locally."
readme = "README.md"
authors = [
    { name = "Cameron Webster", email = "cameron.webster@nnsa.doe.gov" },
]
requires-python = ">=3.9"

dependencies = [
    ""torch>=2.0",
    "tensorflow>=2.12",
    "numpy>=1.23",
    "protobuf>=3.20,<5",
]

[project.urls]
Homepage = "https://github.doe.gov/Cameron-Webster/local-llm.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# These patterns ensure BERT assets are included inside the installed package
"bert_package" = [
    "bert_config.json",
    "vocab.txt",
    "*.ckpt.*"
]

