[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm"
version = "0.2.0"
description = "Library to run open-source large language models (LLMs) stored locally."
readme = "README.md"
authors = [
  { name = "Cameron Webster", email = "cameron.webster@nnsa.doe.gov" },
]
requires-python = ">=3.9"

dependencies = [
  "torch>=2.0",
  "tensorflow>=2.20",
  "numpy>=1.23"
]

[project.urls]
Homepage = "https://github.doe.gov/Cameron-Webster/local-llm.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"local_llm" = [
  "bert_config.json",
  "vocab.txt",
  "*.ckpt.*"
]
